fixing and optimizing color contrast

--- a/finalproject/styles/siteplan.css
+++ b/finalproject/styles/siteplan.css
@@ -439,7 +439,7 @@ dialog p {
 
 .footer-links a,
 .footer-resources a {
-    color: var(--secondary-color);
+    color: var(--white);
     text-decoration: none;
     font-weight: 600;
 }
